<?xml version="1.0"?>
<package>
  <name>erwhi_navigation</name>
  <version>0.2.7</version>
  <description>Autonomous mapping and navigation demos for the ERWHI</description>

  <author email="giovannididio.bruno@gmail.com">GBr1</author>

  <maintainer email="giovannididio.bruno@gmail.com">GBr1</maintainer>

  <license>BSD</license>

  <url type="website">http://gbr1.github.io/erwhi_project</url>
  <url type="bugtracker">https://github.com/gbr1/erwhi</url>
  <url type="repository">https://github.com/gbr1/erwhi</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
